# smfigapl

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  smfigapl.cpp
include/: sm_cond.hpp  sm_disp.hpp  sm_except.hpp  sm_file.hpp  sm_global.hpp  sm_in.hpp  sm_lang.hpp  sm_misc.hpp  sm_out.hpp  sm_search.hpp  sm_stat.hpp  sm_ts.hpp  sm_val.hpp
samples/english/basic/: 001_4-fields_8-teams.toml  002_8-fields_16-teams_2-2-tournaments.toml  format.toml  in.txt  tournament.ods
samples/german/basic/: 001_4-fields_8-teams.toml  003_4-fields_7-teams.toml  format.toml  in.txt  tournament.ods
src/: CMakeLists.txt  sm_cond.cpp  sm_disp.cpp  sm_except.cpp  sm_file.cpp  sm_in.cpp  sm_lang.cpp  sm_misc.cpp  sm_out.cpp  sm_search.cpp  sm_stat.cpp  sm_ts.cpp  sm_val.cpp
test/: CMakeLists.txt  main.cpp  path.hpp.in  test_misc.hpp
test/cfg_files/generic/: 0001_3f_7t_2c_2ft.toml  0002_3f_6t_2c_2ft_2it.toml  0003_4f_8t_3c_2ft.toml  0004_4f_8t_3c_2ft_no_cond.toml  0005_4f_8t_3c_1ft_4r_2it_2hf.toml  0006_4f_8t_3c_2ft_4r_2it_2hf.toml  0007_4f_8t_3c_2ft_ha.toml  0008_3f_6t_2c_2ft.toml  0009_3f_7t_2c_2ft_2hf.toml  0010_4f_8t_3c_2ft_4r_2it_2hf_german.toml  0011_4f_7t_3c_2ft.toml  0012_8f_16t_2c_2ft_2hf.toml  steps.toml
test/cfg_files/input_validation/: 0001_NRounds_gt_max.toml  0002_NRounds_lt_one.toml  0003_NFields_gt_max.toml
test/cond_check/: test_cond_check.cpp
test/input_val_check/: test_input_val_check.cpp
