add_executable(smfigapl smfigapl.cpp)

target_link_libraries(smfigapl PRIVATE sm_misc)
target_link_libraries(smfigapl PRIVATE sm_in)
target_link_libraries(smfigapl PRIVATE sm_out)
target_link_libraries(smfigapl PRIVATE sm_val)
target_link_libraries(smfigapl PRIVATE sm_search)
target_link_libraries(smfigapl PRIVATE sm_ts)
target_link_libraries(smfigapl PRIVATE sm_cond)
target_link_libraries(smfigapl PRIVATE sm_stat)
target_link_libraries(smfigapl PRIVATE sm_disp)
target_link_libraries(smfigapl PRIVATE stopwatch)
target_link_libraries(smfigapl PRIVATE sm_file)
target_link_libraries(smfigapl PRIVATE sm_except)
target_link_libraries(smfigapl PRIVATE sm_lang)
target_link_libraries(smfigapl PRIVATE cxxopts) 
include_directories("${PROJECT_BINARY_DIR}") 